--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    //  retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.5.1-SNAPSHOT'
+    implementation 'com.google.code.gson:gson:2.8.5'
 
     //coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9"
@@ -50,5 +55,9 @@ dependencies {
     def lifecycle_version = "2.2.5"
     implementation "android.arch.lifecycle:extensions:$lifecycle_version"
     annotationProcessor "android.arch.lifecycle:compiler:$lifecycle_version"
+
+    //kodein dependency injection
+    implementation 'org.kodein.di:kodein-di-generic-jvm:6.2.1'
+    implementation 'org.kodein.di:kodein-di-framework-android-x:6.2.1'
 
 }
