--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,16 @@ dependencies {
     implementation 'org.kodein.di:kodein-di-generic-jvm:6.2.1'
     implementation 'org.kodein.di:kodein-di-framework-android-x:6.2.1'
 
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+
+
+    //  viewModel & liveData
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+
+    //Material design
+    implementation "com.google.android.material:material:1.2.1"
+
+
 }
