--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.submit.SubmitActivity"/>
+        <activity
+            android:name=".ui.submit.SubmitActivity"
+            android:parentActivityName=".ui.MainActivity" />
         <activity android:name=".ui.MainActivity" />
-        <activity android:name=".ui.spash.SplashActivity">
+        <activity android:name=".ui.splash.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
